--- a/src/main/frontend/components/page.css
+++ b/src/main/frontend/components/page.css
@@ -92,7 +92,7 @@
     }
   }
 
-  .db-page-title-actions {
+  .ls-page-title-actions {
     &:has(button[data-popup-active]) {
       @apply opacity-100;
     }
