--- a/src/main/frontend/ui.css
+++ b/src/main/frontend/ui.css
@@ -275,6 +275,17 @@ html.is-mobile {
   display: inline-block;
 }
 
+.ui__icon svg {
+  filter: brightness(0.8);
+  transition: filter .15s;
+  will-change: filter;
+}
+
+.ui__icon:hover svg {
+  filter: brightness(1);
+  transition-duration: .15s;
+}
+
 .type-icon {
   @apply text-base text-center flex items-center justify-center rounded border mr-2 relative;
 
