enhance(capacitor): improve block editor

--- a/src/main/capacitor/app.css
+++ b/src/main/capacitor/app.css
@@ -92,7 +92,7 @@ ion-textarea {
   }
 
   .block-item {
-    @apply flex list-none active:opacity-70 py-1;
+    @apply flex list-none py-1;
   }
 
   .block-bullet-marker {
