enhance(capacitor): improve classic block editor

--- a/src/main/capacitor/app.css
+++ b/src/main/capacitor/app.css
@@ -1,3 +1,6 @@
+html, body {
+  @apply text-[18px] leading-6;
+}
 #root {
   @apply p-4;
 }
@@ -84,6 +87,18 @@ ion-textarea {
 }
 
 .editor-aux-input {
+}
+
+.app-page-blocks {
+  &.as-classic {
+    @apply -ml-2.5 py-2 pr-1;
+
+    .editor-inner {
+      > textarea {
+        @apply w-full;
+      }
+    }
+  }
 }
 
 .app-blocks-list {
