enhance(capacitor): improve classic block editor

--- a/tailwind.capacitor.css
+++ b/tailwind.capacitor.css
@@ -9,6 +9,7 @@
 @import "codemirror/lib/codemirror.css";
 @import "codemirror/theme/solarized.css";
 
+@import "src/main/frontend/common.css";
 @import "src/main/frontend/ui.css";
 @import "src/main/frontend/components/block.css";
 @import "src/main/frontend/components/property.css";
