fix: block align

--- a/src/main/capacitor/components/app.css
+++ b/src/main/capacitor/components/app.css
@@ -76,6 +76,10 @@ ion-textarea {
   box-shadow: none;
 }
 
+.page {
+  @apply px-3;
+}
+
 :root {
     --ls-page-title-size: 26px;
     --ion-color-primary: #000000;
