--- a/tailwind.capacitor.css
+++ b/tailwind.capacitor.css
@@ -19,5 +19,6 @@
 @import "src/main/frontend/components/datepicker.css";
 @import "src/main/frontend/components/views.css";
 @import "src/main/frontend/components/block/views.css";
+@import "src/main/frontend/components/journal.css";
 
 @import-glob "src/main/capacitor/**/[!_]*.css";
