--- a/tailwind.capacitor.css
+++ b/tailwind.capacitor.css
@@ -11,6 +11,7 @@
 
 @import "src/main/frontend/common.css";
 @import "src/main/frontend/ui.css";
+@import "src/main/frontend/components/icon.css";
 @import "src/main/frontend/components/theme.css";
 @import "src/main/frontend/components/block.css";
 @import "src/main/frontend/components/property.css";
