--- a/tailwind.capacitor.css
+++ b/tailwind.capacitor.css
@@ -12,6 +12,7 @@
 @import "src/main/frontend/common.css";
 @import "src/main/frontend/ui.css";
 @import "src/main/frontend/components/icon.css";
+@import "src/main/frontend/mobile/index.css";
 @import "src/main/frontend/components/theme.css";
 @import "src/main/frontend/components/block.css";
 @import "src/main/frontend/components/property.css";
