--- a/src/main/capacitor/components/app.css
+++ b/src/main/capacitor/components/app.css
@@ -1,3 +1,8 @@
+:root {
+  --ls-page-title-size: 26px;
+  --ion-color-primary: #000000;
+}
+
 html.plt-capacitor.plt-android {
   --ion-safe-area-top: 42px;
   --ion-safe-area-bottom: 16px;
@@ -18,6 +23,10 @@ html.plt-capacitor.plt-android {
   .searchbar-input.sc-ion-searchbar-md {
     @apply shadow-none;
   }
+}
+
+.page {
+  @apply px-3;
 }
 
 ul {
@@ -45,6 +54,12 @@ ion-buttons {
     &::part(native) {
       @apply whitespace-nowrap overflow-hidden font-semibold active:opacity-80 pr-8;
     }
+  }
+}
+
+.sc-ion-buttons-md {
+  &.text-muted-foreground {
+    @apply text-gray-600;
   }
 }
 
@@ -82,18 +97,23 @@ ion-tab-bar {
   }
 }
 
+ion-content {
+  .ls-page-blocks {
+    @apply px-1;
+  }
+
+  .block-main-container {
+    &[data-has-heading] {
+      > .block-control-wrap {
+        @apply static;
+      }
+    }
+  }
+}
+
 [type='text']:focus, [type='email']:focus, [type='url']:focus,
 [type='password']:focus, [type='number']:focus, [type='date']:focus, [type='datetime-local']:focus,
 [type='month']:focus, [type='search']:focus, [type='tel']:focus, [type='time']:focus, [type='week']:focus,
 [multiple]:focus, textarea:focus, select:focus {
   box-shadow: none;
-}
-
-.page {
-  @apply px-3;
-}
-
-:root {
-  --ls-page-title-size: 26px;
-  --ion-color-primary: #000000;
 }
