fix(capacitor): incorrect scrollable content container with soft keyboard

--- a/src/main/capacitor/components/app.css
+++ b/src/main/capacitor/components/app.css
@@ -25,6 +25,14 @@ html.plt-capacitor.plt-android {
   }
 }
 
+html.has-mobile-keyboard {
+  .ion-page:not(.ion-page-hidden) {
+    & > ion-content::part(scroll) {
+      padding-bottom: 512px !important;
+    }
+  }
+}
+
 .page {
   @apply px-3;
 }
