fix(capacitor): code block

--- a/tailwind.capacitor.css
+++ b/tailwind.capacitor.css
@@ -24,6 +24,7 @@
 @import "src/main/frontend/components/block/views.css";
 @import "src/main/frontend/components/journal.css";
 @import "src/main/frontend/components/user/login.css";
+@import "src/main/frontend/extensions/code.css";
 @import "src/main/frontend/components/file_sync.css";
 
 @import-glob "src/main/capacitor/**/[!_]*.css";
