--- a/tailwind.capacitor.css
+++ b/tailwind.capacitor.css
@@ -9,6 +9,7 @@
 @import "codemirror/lib/codemirror.css";
 @import "codemirror/theme/solarized.css";
 
+@import "src/main/frontend/animations.css";
 @import "packages/amplify/dist/amplify.css";
 @import "src/main/frontend/common.css";
 @import "src/main/frontend/ui.css";
