fix(mobile): images gallery

--- a/src/main/capacitor/components/app.css
+++ b/src/main/capacitor/components/app.css
@@ -30,6 +30,10 @@ html.plt-capacitor.plt-android {
       }
     }
   }
+
+  .pswp__top-bar {
+    @apply relative top-8;
+  }
 }
 
 html.has-mobile-keyboard {
