fix: text overlap for Deadline and Scheduled properties
fixes https://test.logseq.com/#/page/683f7b4a-4279-48bd-bff3-ec16c4bc5316

--- a/src/main/frontend/components/property.css
+++ b/src/main/frontend/components/property.css
@@ -293,6 +293,7 @@ a.control-link {
   min-height: 28px;
   padding-top: 0;
   padding-bottom: 0;
+  container-type: normal;
 }
 
 .ls-page-properties .property-key, .ls-properties-area .property-key {
