enhance(ux): more intuitive ux for tag properties
1. Tag properties are now displayed vertically with their description for
improved readability.

2. Adding a property from a tag page now creates a tag property (not a page property). Previously, this caused confusion as users expected properties to be inherited by tagged nodes.

3. Fixed a flickering issue when reordering properties.

Users can still add page properties by using cmd+p.

--- a/src/main/frontend/components/property.css
+++ b/src/main/frontend/components/property.css
@@ -166,11 +166,6 @@
     @apply w-full;
     margin: 0;
   }
-
-  .property-key a {
-    color: var(--ls-primary-text-color);
-  }
-
   .property-key a:hover {
     color: var(--ls-link-text-hover-color);
   }
@@ -178,6 +173,10 @@
   .multi-values {
     @apply cursor-pointer active:opacity-80;
   }
+}
+
+.property-key a, .ls-new-property a {
+    color: var(--ls-primary-text-color);
 }
 
 .ui__button.empty-btn, .empty-text-btn {
