fix(mobile): text overflow for the references view body

--- a/src/main/capacitor/components/app.css
+++ b/src/main/capacitor/components/app.css
@@ -132,6 +132,10 @@ ion-buttons {
     #app-container-wrapper {
       @apply relative -top-6;
     }
+
+    .ls-view-body {
+      @apply max-w-[90vw];
+    }
   }
 }
 
