fix(mobile): invalid css

--- a/src/main/capacitor/components/app.css
+++ b/src/main/capacitor/components/app.css
@@ -178,7 +178,7 @@ ion-content {
 
     &[data-has-heading="1"], &:has(textarea.h1) {
       > .block-control-wrap, > .block-control-wrap > .block-control {
-        @apply mt-4.5;
+        @apply mt-[18px];
       }
     }
 
