fix: breadcrumb inline

--- a/src/main/frontend/components/block.css
+++ b/src/main/frontend/components/block.css
@@ -118,7 +118,10 @@
 }
 
 .breadcrumb div, .breadcrumb span {
-  display: !inline;
+  display: inline;
+  .property-value-inner[data-type], .property-value-inner .select-item {
+    display: inline;
+  }
 }
 
 .open-block-ref-link {
