--- a/src/main/frontend/components/block.css
+++ b/src/main/frontend/components/block.css
@@ -507,7 +507,7 @@
 .ls-page-title-container .block-content-wrapper {
   .ls-page-title-actions {
     @apply absolute -top-5 opacity-0;
-    left: -2px;
+    left: 1.375rem;
   }
 
   &:hover {
